# mapeprof-accessibility-ubs

./: .gitignore  README.md  main.py  projeto.qgz  pyproject.toml
dados/processados/: isocrona_teste.geojson
dados/processados/osmnx/: resumo_velocidades.csv
dados/processados/overturemaps/: trechos_desconectados_audit.gpkg  trechos_desconectados_audit_2.gpkg
dados/terceiros/ibge/: teresina_bairros.gpkg  teresina_bairros.gpkg-shm  teresina_bairros.gpkg-wal  teresina_bairros_subdistritos.gpkg  teresina_municipio.geojson
dados/terceiros/semplam/: ubs_zu.geojson  ubs_zu.qmd  ubs_zu_amostras_20perc.geojson  ubs_zu_amostras_20perc.qmd
dados/terceiros/zona_urbana/: area_estudo_zu_buffer3km.qml  zu.geojson  zu_buffer3km.geojson  zu_buffer3km.qmd
notebooks/: 01 - Obter grafos (OvertureMaps).ipynb  01 obte grafos (osmnx).ipynb  01_obter grafos (overture).ipynb  02 - Limpeza e Classificacao das Vias por IA.ipynb  02.1 - Limpeza.ipynb  02.2 - Classificacao das Vias por IA.ipynb  02_isocrona_alphaShape.ipynb  02_processamento_rede (overturemaps).ipynb  03 - Calculando tempo de viagem.ipynb  03 preProcessamento - classificacao das vias.ipynb  04 - Calculando Isocronas (parte 1).ipynb  04 - Calculando Isocronas (parte 2).ipynb  04 - Calculando Isocronas parte 2.ipynb  classificacao vias (osm).ipynb  teste_alphashape.ipynb
notebooks/old/: 01_obter_grafo.ipynb  02_isocrona_alphaShape.ipynb  02_isocronas_convexHull.ipynb  02_processamento_rede (osmnx).ipynb  09_obter_building.ipynb
outputs/vectors/: isocronas_ape_final.gpkg  isocronas_carro_final.gpkg  isocronas_todas_ubs_ape.geojson  isocronas_todas_ubs_carro.geojson  isocronas_ubs_final_gnn.gpkg  teresina_bbox_gnn_impedancias_topologico_nodes.gpkg
