[project]
name = "mapeprof-accessibility-ubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "city2graph>=0.2.3",
    "folium>=0.20.0",
    "jupyterlab>=4.5.3",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.8",
    "osmnx>=2.0.7",
    "seaborn>=0.13.2",
    "urbanity>=0.5.18",
]
