[project]
name = "mapeprof-accessibility-ubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "city2graph>=0.2.3",
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "jupyterlab>=4.5.3",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.8",
    "networkx>=2.8.6",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "urbanity>=0.5.18",
]
