[project]
name = "mapeprof-accessibility-ubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "city2graph>=0.2.3",
    "contextily>=1.7.0",
    "earthengine-api>=1.7.12",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geemap>=0.34.3",
    "geopandas>=1.1.2",
    "h3>=4.4.2",
    "jupyterlab>=4.5.3",
    "mapbox-vector-tile>=2.2.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.8",
    "networkit>=11.2.1",
    "networkx>=2.8.6",
    "opencv-python>=4.11.0.86",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "urbanity>=0.5.18",
    "vt2geojson>=0.2.1",
]
